# Rc-Media-Player

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  resources.qrc
src/app/: app.cpp  app.h  arguments.cpp  arguments.h
src/mpv/: mpv_controller.cpp  mpv_controller.h  mpv_player.cpp  mpv_player.h  mpv_renderer.cpp  mpv_renderer.h
src/socket/: command_parser.cpp  command_parser.h  socket_server.cpp  socket_server.h
src/ui/: audio.cpp  audio.h  subtitle.cpp  subtitle.h  ui_state.cpp  ui_state.h  video.cpp  video.h
src/ui/qml/: AudioMenu.qml  SubtitleMenu.qml  TransportControls.qml  VideoMenu.qml  main.qml
